--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Roboto:wght@400;500;700;900&display=swap');
 
+body{
+    height: 100vh;
+    background: radial-gradient(circle, rgba(29,162,154,1) 0%, rgba(3,3,24,1) 77%, rgba(0,212,255,1) 100%);
+}
 
+.todo-title{
+    color: #ff0135;
+}
 
+.add-btn{
+    color: white;
+}
+
+.add-btn:hover{
+    background: radial-gradient(circle, rgba(29,162,154,1) 3%, rgba(3,3,24,1) 22%, rgba(0,212,255,1) 100%);
+    border-color: rgba(8,189,221,1);
+
+}
